[Config] add env.example

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@ API_URL=http://localhost
 WEB_URL=http://localhost
 CORS_URLS=http://localhost:3000,http://localhost:3001
 DB_HOST=127.0.0.1
-DB_NAME=
+DB_NAME=driving-license-examination
 DB_USER=root
 DB_PASSWORD=root
